<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="#373737"
        android:layout_marginTop="26dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock_seconds"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="#f31b10"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock_message"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="#373737" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_message_power"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textSize="12sp"
        android:layout_marginTop="4dp" />

    <ImageView
        android:layout_width="318dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/pic"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <Button
        android:id="@+id/lock_now"
        android:layout_width="211dp"
        android:layout_height="32dp"
        android:text="@string/lock_button"
        android:onClick="onActivate"
        android:layout_gravity="center_horizontal"
        android:background="#109bbc"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="55dp" />

</LinearLayout>